<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="fbSignalSimSlider" Id="{c8e777ba-6f9f-4e87-b459-2b373f0a1647}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK fbSignalSimSlider
VAR_IN_OUT
	em : ST_EM;
END_VAR
VAR_INPUT
	EnableSim : BOOL;
	UnknownStartPosition : BOOL := FALSE;
	StartOnOtherSide : BOOL := FALSE;
END_VAR
VAR
	InitialConfig : BOOL := TRUE;
	timers : ARRAY[1..10] OF TON;
	elapsed : TIME;
	OtherSide : BOOL := FALSE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF EnableSim THEN
	IF InitialConfig THEN
		InitialConfig := FALSE;
		IF NOT UnknownStartPosition THEN
			IF StartOnOtherSide THEN
				em.Config.Data.I[2] := TRUE;
				OtherSide := TRUE;
			ELSE
				em.Config.Data.I[1] := TRUE;
			END_IF
		ELSE
			em.Config.Data.I[1] := FALSE;
			em.Config.Data.I[2] := FALSE;
		END_IF
		OtherSide := FALSE;
	END_IF
	
	timers[1].PT := timers[2].PT := timers[3].PT := T#10S;
	
	CASE em.SequenceStep OF
		10: em.Cmd := E_CMD.clear;	
	
		30:	em.Cmd := E_CMD.reset;

		35:	timers[3](in := TRUE);
		
			IF timers[3].Q THEN
				timers[3](in := FALSE);
				em.Config.Data.I[1] := TRUE;
			END_IF
	
		40:	em.Cmd := E_CMD.start;
		
		50:	IF NOT OtherSide AND em.Config.Data.I[1] THEN
				timers[1](in := TRUE);
			END_IF
			
			IF timers[1].Q THEN
				timers[1](in := FALSE);
				em.Config.Data.I[3] := TRUE;
			END_IF
			
		60:	IF NOT OtherSide AND em.Config.Data.I[1] THEN
				timers[2](in := TRUE);
			ELSE
				timers[3](in := TRUE);
			END_IF
			
			em.Config.Data.I[1] := FALSE;
			em.Config.Data.I[2] := FALSE;
			em.Config.Data.I[3] := FALSE;
			
			IF timers[2].Q THEN
				timers[2](in := FALSE);
				em.Config.Data.I[2] := TRUE;
			END_IF
			
			IF timers[3].Q THEN
				timers[3](in := FALSE);
				em.Config.Data.I[1] := TRUE;
			END_IF
			
		200:em.Cmd := E_CMD.unhold;
		
		300:em.Cmd := E_CMD.unsuspend;
	END_CASE
END_IF]]></ST>
    </Implementation>
    <LineIds Name="fbSignalSimSlider">
      <LineId Id="19" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="37" Count="1" />
      <LineId Id="123" Count="0" />
      <LineId Id="40" Count="1" />
      <LineId Id="39" Count="0" />
      <LineId Id="28" Count="1" />
      <LineId Id="42" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="124" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="45" Count="2" />
      <LineId Id="9" Count="0" />
      <LineId Id="125" Count="1" />
      <LineId Id="78" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="96" Count="1" />
      <LineId Id="85" Count="2" />
      <LineId Id="80" Count="0" />
      <LineId Id="79" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="50" Count="1" />
      <LineId Id="53" Count="1" />
      <LineId Id="62" Count="0" />
      <LineId Id="56" Count="2" />
      <LineId Id="118" Count="3" />
      <LineId Id="113" Count="0" />
      <LineId Id="116" Count="1" />
      <LineId Id="114" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="63" Count="0" />
      <LineId Id="65" Count="2" />
      <LineId Id="64" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="73" Count="2" />
      <LineId Id="72" Count="0" />
      <LineId Id="127" Count="3" />
      <LineId Id="12" Count="0" />
      <LineId Id="22" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>