<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="fbSignalSimSlider" Id="{c8e777ba-6f9f-4e87-b459-2b373f0a1647}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK fbSignalSimSlider
VAR_IN_OUT
	em : ST_EM;
END_VAR
VAR_INPUT
	EnableSim : BOOL;
	UnknownStartPosition : BOOL := FALSE;
	StartOnOtherSide : BOOL := FALSE;
	CmdSim : BOOL := true;
END_VAR
VAR
	InitialConfig : BOOL := TRUE;
	timers : ARRAY[1..10] OF TON;
	duration : TIME := T#5S;
	elapsed : TIME;
	OtherSide : BOOL := FALSE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF EnableSim THEN
	IF InitialConfig THEN
		InitialConfig := FALSE;
		IF NOT UnknownStartPosition THEN
			IF StartOnOtherSide THEN
				em.Config.Data.I[2] := TRUE;
				OtherSide := TRUE;
			ELSE
				em.Config.Data.I[1] := TRUE;
			END_IF
		ELSE
			em.Config.Data.I[1] := FALSE;
			em.Config.Data.I[2] := FALSE;
		END_IF
		
		timers[1].PT := timers[2].PT := timers[3].PT := timers[10].PT := duration;
		timers[4].PT := timers[5].PT := timers[6].PT := timers[7].PT := timers[8].PT := timers[9].PT := duration / 3;
	END_IF
	
	CASE em.SequenceStep OF
		10:	IF CmdSim THEN
				timers[5](in := TRUE);
			
				IF timers[5].Q THEN
					timers[5](in := FALSE);
					em.Cmd := E_CMD.clear;
				END_IF
			END_IF
	
		30:	IF CmdSim THEN
				timers[6](in := TRUE);
			
				IF timers[6].Q THEN
					timers[6](in := FALSE);
					em.Cmd := E_CMD.reset;	
				END_IF
			END_IF

		35:	timers[10](in := TRUE);
		
			IF timers[10].Q THEN
				timers[10](in := FALSE);
				em.Config.Data.I[1] := TRUE;
			END_IF
	
		40: IF CmdSim THEN
				timers[4](in := TRUE);
			
				IF timers[4].Q THEN
					timers[4](in := FALSE);
					em.Cmd := E_CMD.start;
				END_IF
			END_IF

		50:	IF NOT OtherSide AND em.Config.Data.I[1] THEN
				timers[1](in := TRUE); 
			END_IF
			
			IF timers[1].Q THEN
				timers[1](in := FALSE);
				em.Config.Data.I[3] := TRUE;
			END_IF
			
		60:	IF NOT OtherSide AND em.Config.Data.I[1] THEN
				timers[2](in := NOT timers[2].Q);
			ELSE
				timers[3](in := NOT timers[3].Q);
			END_IF
			
			em.Config.Data.I[1] := FALSE;
			em.Config.Data.I[2] := FALSE;
			em.Config.Data.I[3] := FALSE;
			
			IF timers[2].Q THEN
				timers[2](in := FALSE);
				em.Config.Data.I[2] := TRUE;
			END_IF
			
			IF timers[3].Q THEN
				timers[3](in := FALSE);
				em.Config.Data.I[1] := TRUE;
			END_IF
			
		200:IF CmdSim THEN
				timers[8](in := TRUE);
			
				IF timers[8].Q THEN
					timers[8](in := FALSE);
					em.Cmd := E_CMD.unhold;	
				END_IF
			END_IF
		
		300:IF CmdSim THEN
				timers[9](in := TRUE);
			
				IF timers[9].Q THEN
					timers[9](in := FALSE);
					em.Cmd := E_CMD.unsuspend;	
				END_IF
			END_IF
	END_CASE

	OtherSide := FALSE;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="fbSignalSimSlider">
      <LineId Id="19" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="37" Count="1" />
      <LineId Id="123" Count="0" />
      <LineId Id="40" Count="1" />
      <LineId Id="39" Count="0" />
      <LineId Id="28" Count="1" />
      <LineId Id="42" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="239" Count="2" />
      <LineId Id="46" Count="1" />
      <LineId Id="9" Count="0" />
      <LineId Id="141" Count="0" />
      <LineId Id="227" Count="0" />
      <LineId Id="142" Count="3" />
      <LineId Id="125" Count="0" />
      <LineId Id="228" Count="0" />
      <LineId Id="126" Count="0" />
      <LineId Id="146" Count="0" />
      <LineId Id="229" Count="0" />
      <LineId Id="147" Count="3" />
      <LineId Id="78" Count="0" />
      <LineId Id="230" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="96" Count="1" />
      <LineId Id="85" Count="2" />
      <LineId Id="80" Count="0" />
      <LineId Id="79" Count="0" />
      <LineId Id="135" Count="0" />
      <LineId Id="233" Count="0" />
      <LineId Id="136" Count="3" />
      <LineId Id="11" Count="0" />
      <LineId Id="234" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="50" Count="1" />
      <LineId Id="53" Count="1" />
      <LineId Id="62" Count="0" />
      <LineId Id="56" Count="2" />
      <LineId Id="118" Count="3" />
      <LineId Id="152" Count="0" />
      <LineId Id="205" Count="4" />
      <LineId Id="65" Count="2" />
      <LineId Id="64" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="73" Count="2" />
      <LineId Id="185" Count="0" />
      <LineId Id="127" Count="0" />
      <LineId Id="167" Count="0" />
      <LineId Id="235" Count="0" />
      <LineId Id="168" Count="3" />
      <LineId Id="128" Count="0" />
      <LineId Id="236" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="172" Count="0" />
      <LineId Id="237" Count="0" />
      <LineId Id="173" Count="3" />
      <LineId Id="130" Count="0" />
      <LineId Id="238" Count="0" />
      <LineId Id="193" Count="1" />
      <LineId Id="132" Count="0" />
      <LineId Id="22" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>