<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="fbSignalSimXYMover" Id="{7169e8eb-476f-4bb5-9ffe-cfa494d7f0fc}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK fbSignalSimXYMover
VAR_IN_OUT
	em : ST_EM;
END_VAR
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	Timer1 : TON;
	Timer2 : TON;
	Timer3 : TON;
	Timer4 : TON;
	Timer5 : TON;
	Timer6 : TON;
	Timer7 : TON;
	Timer8 : TON;
	Timer9 : TON;
	Timer10: TON;
	Trigger : R_Trig;
	TriggerVar : BOOL := TRUE;
	TriggerVarToOFF : BOOL;
	TriggerVarToSimStatus1 : BOOL;
	TriggerVarToSimStatus2 : BOOL;
	TriggerVarToSimStatus3 : BOOL;
	Elapsed : TIME;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[	CASE em.SequenceStep OF
		
	0:	// Rezerwa
		
	1: 	Timer1(PT := T#1S);
		Timer1(IN := em.Config.Data.Q[1]);
		em.Config.Data.I[1] := Timer1.Q;
		Timer1(PT := T#1S);
		Timer1(IN := em.Config.Data.Q[2]);
		em.Config.Data.I[2] := Timer1.Q;
		Timer1(PT := T#1S);
		Timer1(IN := em.Config.Data.Q[3]);
		em.Config.Data.I[3] := Timer1.Q;
		Timer1(PT := T#1S);
		Timer1(IN := em.Config.Data.Q[4]);
		em.Config.Data.I[4] := Timer1.Q;
		
		IF Timer1.Q = TRUE THEN
			Timer1(IN := FALSE);
		END_IF
	
	2: // Rezerwa
		
	3: 	TriggerVarToSimStatus2 := TRUE;
		Timer8(PT := T#2S);
		Timer8(IN := TriggerVarToSimStatus2);
		
		IF Timer8.Q = TRUE THEN
			Timer8(IN := FALSE);
			em.Cmd := E_Cmd.Reset;
			TriggerVarToSimStatus2 := FALSE;
		END_IF
	
	4: 	Timer3(PT := T#2S);
		Timer3(IN := em.Config.Data.Q[1]);
		em.Config.Data.I[1] := Timer3.Q;
		Timer3(PT := T#2S);
		Timer3(IN := em.Config.Data.Q[3]);
		em.Config.Data.I[3] := Timer1.Q;
		
		IF Timer3.Q = TRUE THEN
			Timer3(IN := FALSE);
		END_IF
		
	5: 	Timer7(PT := T#1S);
		Timer7(IN := em.Config.Data.Q[1]);
		em.Config.Data.I[1] := Timer7.Q;
		Timer7(PT := T#1S);
		Timer7(IN := em.Config.Data.Q[2]);
		em.Config.Data.I[2] := Timer7.Q;
		Timer7(PT := T#1S);
		Timer7(IN := em.Config.Data.Q[3]);
		em.Config.Data.I[3] := Timer7.Q;
		Timer7(PT := T#1S);
		Timer7(IN := em.Config.Data.Q[4]);
		em.Config.Data.I[4] := Timer7.Q;
		
		IF Timer7.Q = TRUE THEN
			Timer7(IN := FALSE);
		END_IF
	
	6:	TriggerVarToSimStatus1 := TRUE;
		Timer10(PT := T#2S);
		Timer10(IN := TriggerVarToSimStatus1);
		
		IF Timer10.Q = TRUE THEN
			Timer10(IN := FALSE);
			em.Cmd := E_CMD.clear;
			TriggerVarToSimStatus1 := FALSE;
		END_IF
	
	10: TriggerVarToSimStatus3 := TRUE;
		Timer9(PT := T#1S);
		Timer9(IN := TriggerVarToSimStatus3);
		
		IF Timer9.Q = TRUE THEN
			Timer9(IN := FALSE);
			em.Cmd := E_Cmd.START;
			TriggerVarToSimStatus3 := FALSE;
		END_IF
		
	
	20:	TriggerVar := TRUE;
		Timer4(PT := T#2S);
		Timer4(IN := TriggerVar);
		em.Config.Data.I[5] := Timer4.Q;
		
		IF Timer4.Q = TRUE THEN
			Timer4(IN := FALSE);
			TriggerVar := FALSE;
		END_IF
		
	30: // Rezerwa
	
	40: Timer5(PT := T#2S);
		Timer5(IN := em.Config.Data.Q[2]);
		em.Config.Data.I[2] := Timer5.Q;
		
		IF Timer5.Q = TRUE THEN
			Timer5(IN := FALSE);
		END_IF
	
	50: Timer6(PT := T#2S);
		Timer6(IN := em.Config.Data.Q[4]);
		em.Config.Data.I[4] := Timer6.Q;
		
		IF Timer6.Q = TRUE THEN
			Timer6(IN := FALSE);
		END_IF
		
	60:	TriggerVarToOFF := TRUE;
		Timer2(PT := T#2S);
		Timer2(IN := TriggerVarToOFF);

		IF Timer2.Q = TRUE THEN
			em.Config.Data.I[5] := FALSE;
			Timer2(IN := FALSE);
			TriggerVarToOFF := FALSE;
		END_IF
	
	70: // Rezerwa
	
	
	END_CASE 
	]]></ST>
    </Implementation>
    <LineIds Name="fbSignalSimXYMover">
      <LineId Id="64" Count="1" />
      <LineId Id="77" Count="1" />
      <LineId Id="194" Count="0" />
      <LineId Id="196" Count="1" />
      <LineId Id="206" Count="1" />
      <LineId Id="205" Count="0" />
      <LineId Id="198" Count="2" />
      <LineId Id="208" Count="1" />
      <LineId Id="201" Count="3" />
      <LineId Id="87" Count="1" />
      <LineId Id="99" Count="1" />
      <LineId Id="210" Count="7" />
      <LineId Id="101" Count="1" />
      <LineId Id="218" Count="1" />
      <LineId Id="111" Count="0" />
      <LineId Id="221" Count="1" />
      <LineId Id="220" Count="0" />
      <LineId Id="112" Count="0" />
      <LineId Id="224" Count="1" />
      <LineId Id="223" Count="0" />
      <LineId Id="226" Count="11" />
      <LineId Id="113" Count="0" />
      <LineId Id="238" Count="0" />
      <LineId Id="240" Count="1" />
      <LineId Id="239" Count="0" />
      <LineId Id="242" Count="0" />
      <LineId Id="244" Count="7" />
      <LineId Id="243" Count="0" />
      <LineId Id="114" Count="53" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>