<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="fbEM" Id="{20ab5818-6755-4885-a642-a71cb67ceff3}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK fbEM
VAR_IN_OUT
	em : ST_EM;
	un : ST_UN;
END_VAR

VAR
	emCmdOld: E_CMD;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Empty for now universal basic em class, every module needs to extends this to ensure compatibility
]]></ST>
    </Implementation>
    <Action Name="GetUnCmd" Id="{a266e4e6-3916-4e46-b695-bab02612cf36}">
      <Implementation>
        <ST><![CDATA[IF emCmdOld <> un.Cmd THEN
	emCmdOld := un.Cmd;
	em.Cmd := un.Cmd;
END_IF]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="fbEM">
      <LineId Id="16" Count="0" />
      <LineId Id="21" Count="0" />
    </LineIds>
    <LineIds Name="fbEM.GetUnCmd">
      <LineId Id="35" Count="2" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>